# syntaxsource

./: README.md  readme.txt
Clients/Client2014/: AppSettings.xml  ReflectionMetadata.xml
Clients/Client2014/shaders/: shaders.json  shaders_d3d9.pack  shaders_glsl.pack  shaders_glsles.pack
Clients/Client2016/: AppSettings.xml  ReflectionMetadata.xml
Clients/Client2016/shaders/: shaders.json
Clients/Client2018/: AppSettings.xml
Clients/Client2018/shaders/: shaders_d3d10.pack  shaders_d3d10_1.pack  shaders_d3d11.pack  (+6 more)
Clients/Client2021/: AppSettings.xml
FFlags/: 2016_RCCService.json  2018_RCCService.json  2020RCCService.json  2020_445_AndroidApp.json  2020_450_PCDesktopClient.json
syntax-bootstrapper/: Cargo.toml  LICENSE  build.rs  readme.md  win-build-release.bat
syntax-bootstrapper/src/: main.rs
syntaxdiscordbot/: .gitignore  config.py.example  main.py
syntaxgameserver/: .gitignore  ClientController.py  ProcessController.py  SOAPFormats.py  UDPProxy.py  config.py.example  gameserver.txt  main.py  readme.md  requirements.txt  rsa_public_gameserver.pub
syntaxgameserver/RCCService2018/: AppSettings.xml
syntaxgameserver/RCCService2020/: AppSettings.xml
syntaxgameserver/Scripts/: Asset.lua  BodyPart.lua  Gameserver.lua  Head.lua  Image.lua  Mesh.lua  PlaceRender.lua  PlaceValidation.lua  PlayerHeadshot.lua  PlayerThumbnail.lua
syntaxwebsite/: .gitignore  README.md  config.example.py  debug.sh  requirements.txt  start.sh
syntaxwebsite/app/: __init__.py  extensions.py  shell_commands.py
syntaxwebsite/tools/: generate_new_keys.py
(+1900 files in other folders)
